# rmcraft-backend

./: .gitignore  ADK_VERIFICATION_REPORT.md  IMPLEMENTATION_COMPLETE.md  Makefile  README.dev.md  README.md  RESUME_CREATION_COMPLETE.md  SCHEMA_ASSEMBLER_TODO.md  debug_strategic_endpoint.ipynb  example_strategic_call.py  main.py  mock_adk.py  pyproject.toml  requirements.txt  test_agents_final.py  test_api_endpoint.py  test_api_structure.py  test_basemodel_validation.py  test_endpoint_simulation.py  test_full_validation.py  test_google_ai_fix.py  test_orchestrator.py  test_pdf_endpoint_manual.py  test_session_fix.py  test_setup.py  test_strategic_components.py  test_strategic_comprehensive.py  test_strategic_endpoint.py  test_strategic_fix.py  test_strategic_simple.py  test_theme_fix.py  test_validation_fix.py  validate_cover_letter_implementation.py  verify_adk_patterns.py
docs/: COVER_LETTER_DB_PERSISTENCE_PLAN.md  COVER_LETTER_LIST_ENDPOINT_PLAN.md  PRISMA_SYNC_IMPLEMENTATION_PLAN.md  RESUME_PDF_VALIDATION_FIX_PLAN.md  STRATEGIC_AGENT_THINKING_MODE_FIX.md  STRATEGIC_ANALYSIS_DIAGNOSIS.md  STRATEGIC_COVER_LETTER_IMPLEMENTATION_PLAN.md  THEME_DATABASE_INTEGRATION.md
migrations/: 20250904_alter_cover_letter_tone_to_text.sql  create_cover_letters_table.sql
tests/: _moved_root_tests_notice.txt  test_api_structure.py  test_assembler_quick.py  test_cover_letter_service.py  test_designer_pdf.py  test_designer_pdf_endpoint.py  test_endpoint_simulation.py  test_full_validation.py  test_schema_assembler.py  test_schema_assembler_integration.py  test_setup.py  test_strategic_components.py  (+11 more)
(+61 files in other folders)
